@@ -1165,6 +1165,7 @@
 
           03-01-10  Bfo     Changed to new version
           03-04-12  Bfo     Domain Name Server support introduced
+          03-04-14  Bfo     Release buffer (accept) at pNClose fixed
     3.22  03-??-??
     -------------------
 */
